--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,12 @@
             <version>3.0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-all</artifactId>
+            <version>5.15.9</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
